src/deploy/ymls/crawler-deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: crawler
  labels:
    app: search-engine
    component: crawler
spec:
  replicas: 1
  selector:
    matchLabels:
      app: search-engine
      component: crawler
  template:
    metadata:
      name: crawler
      labels:
        app: search-engine
        component: crawler
    spec:
      containers:
      - image: yunusovtr/crawler:main
        name: crawler
        imagePullPolicy: Always
