src/deploy/ymls/ui-deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ui
  labels:
    app: search-engine
    component: ui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: search-engine
      component: ui
  template:
    metadata:
      name: ui-pod
      labels:
        app: search-engine
        component: ui
    spec:
      containers:
      - image: yunusovtr/ui:main
        name: ui
