src/deploy/ymls/crawler-service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: crawler
  labels:
    app: search-engine
    component: crawler
spec:
  ports:
  - port: 8000
    protocol: TCP
    targetPort: 8000
  selector:
    app: search-engine
    component: crawler
