src/deploy/ymls/ui-ingress.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: ui-redirect
spec:
  type: ExternalName
  externalName: ui.app.svc.cluster.local

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ui
  annotations:
    cert-manager.io/issuer: gitlab-issuer
    kubernetes.io/ingress.provider: nginx
    meta.helm.sh/release-name: gitlab
    meta.helm.sh/release-namespace: default
    nginx.ingress.kubernetes.io/custom-http-errors: ""
    nginx.ingress.kubernetes.io/proxy-buffering: "off"
    kubernetes.io/ingress.allow-http: "true"
  labels:
    app: kas
    app.kubernetes.io/managed-by: Helm
    chart: kas-6.2.2
    heritage: Helm
    release: gitlab
spec:
  ingressClassName: gitlab-nginx
  rules:
  - host: ytr.apsago.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ui-redirect
            port:
              number: 8000
  tls:
  - hosts:
    - ytr.apsago.com
    secretName: ui-tls
